# pacx

./: .luarc.json  Cargo.toml  README.md  go.mod  go.sum  main.go
.github/workflows/: release.yaml  test.yaml
cmd/: info.go  install.go  list.go  outdated.go  root.go  uninstall.go  upgrade.go  why.go
config/: load.go
src/: cmd.rs  config.rs  default.lua  main.rs
src/config/: default.lua  load.rs
tests/: cli.rs  pacx.lua  test_manager.lua
