[package]
name = "pacx"
version = "0.5.1"
edition = "2021"
description = "Wrapper for package managers, allowing you to define and configure your package managers in Lua"
license = "Apache-2.0"
repository = "https://github.com/akimon658/pacx"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"
strip = "symbols"

[dependencies]
clap = { version = "4.5.28", features = ["cargo", "string"] }
dirs = "6.0.0"
mlua = { version = "0.10.2", features = ["lua54", "vendored"] }

[dev-dependencies]
assert_cmd = "2.0.16"
